# AI-Proctoring

./: .gitignore  PRESENTATION.md  PROJECT.md  Project.md  README.md  RUN.md  main.py  models.md  pyproject.toml  start_api.sh  test_ui.html
data/raw/database/: READ_ME.txt
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  FASTAPI_QUICKSTART.md  IMPLEMENTATION.md  INTEGRATION_GUIDE.md  MODULAR_STRUCTURE.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  SESSION_RESUME_FEATURE.md  TEST_UI_GUIDE.md  VISUAL_ARCHITECTURE.md  cnn_bi_lstm_model.md  conditional_visualization.md  face_landmarks.md  face_mesh_integration.md  gaze_tracking.md  head_pose.md  mediapipe_facemesh_landmark.md  no_face_multiface.md
examples/: client_example.py
reports/: training_log.csv
src/: __init__.py
src/batch/: convert_videos.py  kill_batch.py  model_video_processor.py  run_batch.py  run_model_batch.py  video_processor.py
src/configs/: app.yaml  model.yaml  thresholds.yaml
src/core/: __init__.py  frame_processor.py  video_stream.py
src/engine/: proctor.py
src/engine/audio/: speaker_detector.py  vad.py
src/engine/face/: blink_estimation.py  face_embedding.py  gaze_estimation.py  head_pose.py  mesh_detector.py
src/engine/obj_detection/: obj_detect.py
src/face/: landmarks.py
src/models/: cnn_bi_lstm_train.py  dataset_analysis.py
src/utils/: config.py  landmark_utils.py  logger.py  suppress_warnings.py
src/web/: __init__.py  app.py  main.py  model_review_app.py  review_app.py
tests/: test_blink.py  test_face_landmarks.py  test_fastapi.py  test_gaze.py
(+22 files in other folders)
