[project]
name = "ai-proctor-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "opencv-python-headless>=4.9.0",  # keeping headless for server environments, though user has UI locally.
    "pyyaml>=6.0",
    "rich>=13.0.0"
]
