[project]
name = "ai-proctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "streamlit",
    "pyyaml",
    "ultralytics>=8.4.14",
    "deepface",
    "tf-keras",
    "imageio-ffmpeg>=0.6.0",
    "tqdm>=4.67.3",
]
