[project]
name = "ai-proctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "mediapipe",
    "numpy",
    "streamlit",
    "pyyaml",
    "ultralytics>=8.4.14",
    "deepface",
    "tf-keras",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "webrtcvad>=2.0.10",
    "setuptools<82",
]
